# demo_qt_cmake

./: CMakeLists.txt  main.cpp  vcpkg.json
